--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Physic Game</title>
 </head>
+
 <body>
-    <h1>Guess what letter I'm thinking of...</h1>
-    <h3>Press any key to begin.</h3>
-
-    <p class="wins"></p>
-    <p class="loses"></p>
-    <p class="guessesLeft"></p>
-    <p class="guessesLetters"></p>
-
+    <div class="container">
+        <div class="head">
+            <h1>Guess what letter I'm thinking of...</h1>
+            <h3>Press any key to begin.</h3>
+        </div>
+        <div class="main-section">
+            <p class="wins"></p>
+            <p class="loses"></p>
+            <p class="guessesLeft"></p>
+            <p class="guessesLetters"></p>
+        </div>
+    </div>
 </body>
 
 <script src="assets/javaScript/logic.js"></script>
+
 </html>
